syntax = "proto3";

package messari.ens.v1;

message Domain {
    string ens_name = 1;
    string name_hash = 2;
    
    string label_name = 3;
    string label_hash = 4;

    string controller_address = 5;
    string registrant_address = 6;

    string transaction_hash = 7;
}

message Domains {
    repeated Domain items = 1; 
}

message Lines {
    repeated string lines = 1;
}
